[project]
name = "typing-challenges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.5",
    "flake8>=7.3.0",
    "flake8-annotations>=3.2.0",
    "flake8-pyi>=25.5.0",
    "wemake-python-styleguide>=1.6.1",
]

[dependency-groups]
dev = [
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "ruff>=0.15.4",
]

[tool.ruff]
lint.select = ["F", "D", "ANN"] # Добавить "E", если нужна проверка на 79 символов в строке.

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = "tests"

# ruff check; mypy .